  iterations - some do not converge at all. Graham Griffiths made
  changes to the code which appears to have fixed the problem as
  example problems now appear to run significantly faster - even
  faster than those I have run using Matlab. Graham's example code is now included in a test.
  Thanks to Graham Griffiths for reporting this problem and supplying the fix.

CHANGES IN VERSION 0.3-6 - Released 2015/09/04

CODE IMPROVEMENTS

* As per CRAN policies, the title in the DESCRIPTION file is now in title
  case.

BUG FIXES

* Fix for Issue #5738: segfault when run from directory lacking write
  permission
  (https://r-forge.r-project.org/tracker/index.php?func=detail&aid=5738&group_id=1149&atid=4552)
  Using "." as a temporary directory can cause problems if it is not
  writeable. Now the geometry package uses tempdir(), which R should
  guarantee to exist.
  Thanks to Laura Riggi for reporting this problem.

* Put Robert B. Gramacy back in the author list, after he was
  accidentally omitted when changing to the Authors@R format on
  2014/10/29 (version 0.3-5).
  Thanks to Robert B. Gramacy for reporting this, and apologies for
  the error.

CHANGES IN VERSION 0.3-5 - Released 2014/11/06

API CHANGES

* The default Qhull option to the delaunayn() function is now "Qt"
  rather than "QJ" and degenerate (zero-area) simplices are removed
  from the triangulation, so that all simplicies are non-degenerate.
  This is a follow-up to issue #2009: delaunayn can return degenerate
  simplicies by default
  (https://r-forge.r-project.org/tracker/index.php?func=detail&aid=1993&group_id=1149&atid=4552). Thanks
  to Rolf Turner for alerting me to the issue. 

* delaunayn() now throws an error if the number of points is less than
  the number of dimensions + 1.

FEATURES

* delaunayn() with the "full" option also returns the areas of
  facets. This is a byproduct of the API change above.

BUG FIXES

* Fix for Issue #2789: inline functions min/max generate linker error