@@ -22,6 +22,9 @@ CHANGES IN VERSION 0.4.0 - Released 2015/10/??
   faster than those I have run using Matlab. Graham's example code is now included in a test.
   Thanks to Graham Griffiths for reporting this problem and supplying the fix.
 
+* Test added for polyarea()
+  Thanks to Toby Hocking for suggesting adding one
+
 CHANGES IN VERSION 0.3-6 - Released 2015/09/04
 
 CODE IMPROVEMENTS
